# JCTensor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
JCTensor/: CMakeLists.txt  JCTensor.cuh  JCTensor.h  JCTensor.hpp
tests/: CMakeLists.txt  temp.cpp
tests/CPU/: CMakeLists.txt  temp.cpp
tests/CUDA/: CMakeLists.txt
